# bili_autolottery

./: .gitignore  README.md  config.py  login.py  lottery.py  main.py  model.py  orm.py  pyproject.toml  test.py  test_auto.py  test_db.py  test_get_dyn.py  test_spider.py
app/: config.py  model.py
app/core/: __init__.py  db.py  dynamic.py  login.py  lottery.py
app/models/: dao.py
app/parser/: __init__.py  ai.py  web.py
app/utils/: scheduler.py
data/: credential.json  dyn_lottery.db  prompt.md  schema.sql  setting.example.toml  setting.toml
tests/: ai_parse.py  db.py  web_parse.py
util/: database.py  dynamics.py  login.py  parse.py  process.py  scheduler.py
