[project]
name = "bili-autolottery"
version = "0.1.0"
description = "bilibili全自动抽奖工具"
authors = [
    {name = "xcenweb"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlacodegen (>=3.0.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
