[project]
name = "bili-autolottery"
version = "0.1.0"
description = "b站全自动抽奖"
authors = [
    {name = "xcenweb"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "bilibili-api-dev (>=16.2.0b1,<17.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
